--- a/compras.html
+++ b/compras.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/estilos-Index.css" />
   <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
-  <link rel="stylesheet" href="assets/css/styles_register.css"/>
 </head>
 <body>
   <header class="border-bottom py-3">
@@ -51,21 +50,52 @@
       </div>
     </div>
   </header>
-
-  <div class="main-content">
-    <div class="register-container">
-      <h2>Regístrate</h2>
-      <form id="registerForm">
-        <input type="text" id="nombre" placeholder="Nombre" required>
-        <input type="text" id="apellido" placeholder="Apellido" required>
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Contraseña" required>
-        <button id="submitBtn" type="submit" disabled>Regístrate</button>
-      </form>
-      <p class="login-link">¿Ya eres miembro? <a href="index.html">Inicia tu sesión</a></p>
+  
+  
+  <main class="container py-5">
+    <div class="row">
+      <div class="col-md-3">
+        <h4>Categorías</h4>
+        <ul class="list-group">
+          <li class="list-group-item"><a href="#">Hombres</a></li>
+          <li class="list-group-item"><a href="#">Mujeres</a></li>
+          <li class="list-group-item"><a href="#">Niños</a></li>
+          <li class="list-group-item"><a href="#">Accesorios</a></li>
+        </ul>
+      </div>
+      <div class="col-md-9">
+        <h2 class="mb-4">Tu Carrito de Compras</h2>
+        <div class="row mb-4">
+          <div class="col-md-4">
+            <img src="assets/img/camisa-hombre.jpg" class="img-fluid rounded" alt="Camisa" />
+          </div>
+          <div class="col-md-8">
+            <h5>Camiseta Casual Hombre</h5>
+            <p>Talla: M | Cantidad: 1</p>
+            <p><strong>$89.900</strong></p>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col-md-4">
+            <img src="assets/img/blusa-mujer.jpg" class="img-fluid rounded" alt="Blusa" />
+          </div>
+          <div class="col-md-8">
+            <h5>Blusa Floral Mujer</h5>
+            <p>Talla: S | Cantidad: 2</p>
+            <p><strong>$74.500</strong></p>
+          </div>
+        </div>
+        <hr />
+        <h4>Total: <strong>$238.900</strong></h4>
+        <button class="btn btn-danger me-2">Vaciar Carrito</button>
+        <a href="pago.html" class="btn btn-dark">Proceder al Pago</a>
+      </div>
     </div>
-  </div>
-
+  </main>
+  
+  
+  
+  
   <footer class="bg-white text-center py-5">
     <div class="container">
       <h2 class="mb-4 fw-bold">NovaTienda</h2>
@@ -109,6 +139,5 @@
   </footer>
 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/register.js"></script>
 </body>
 </html>
