--- a/index.html
+++ b/index.html
@@ -5,30 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NovaTienda</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/estilos-Index.css">
+  <link rel="stylesheet" href="assets/css/estilos-Index.css"/>
+  <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
+  </meta>
+  </meta>
 </head>
 <body>
-  <header>
-    <div class="logo"><img src="assets/img/logo.jpg" width="150" height="150"> </div>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="#productos">Productos</a>
-      <a href="#carrito">Carrito</a>
-      <a href="contacto.html">Contacto</a>
-      <a href="register.html" id = "registro">Registrarse</a>
-      <a href="login.html">Iniciar sesión</a>
-      <div class="dropdown">
-        <a href="#">☰</a>
-        <div class="dropdown-menu">
-          <a href="index.html">Inicio</a>
-          <a href="#bienvenida">Te damos la bienvenida</a>
-          <a href="#tienda">Tienda</a>
-          <a href="https://instagram.com">Instagram</a>
-          <a href="#promocion">Promoción</a>
-          <a href="acercade.html" >Acerca de Nosotros</a>
-        </div>
+  <header class="border-bottom py-3">
+    <div class="container d-flex flex-wrap align-items-center justify-content-between">
+      <div class="d-flex align-items-center mb-2 mb-lg-0">
+        <img src="assets/img/logo.jpg" width="120" height="120" alt="NovaTienda Logo" />
       </div>
-    </nav>
+
+      <nav class="mb-2 mb-lg-0 flex-grow-1 d-none d-md-block">
+        <ul class="nav justify-content-center">
+          <li class="nav-item"><a href="index.html" class="nav-link px-3 fw-bold">Inicio</a></li>
+          <li class="nav-item"><a href="productos.html" class="nav-link px-3 fw-bold">Productos</a></li>
+          <li class="nav-item"><a href="compras.html" class="nav-link px-3 fw-bold">Compras</a></li>
+          <li class="nav-item"><a href="login.html" class="nav-link px-3 fw-bold">Iniciar sesión</a></li>
+        </ul>
+      </nav>
+
+      <div class="dropdown mb-2 mb-lg-0" style="padding-right: 10px;">
+        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+          ☰
+        </a>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+          <li><a class="dropdown-item" href="index.html">Inicio</a></li>
+          <li><a class="dropdown-item" href="register.html">Registrarse</a></li>
+          <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
+          <li><a class="dropdown-item" href="acercade.html">Acerca de Nosotros</a></li>
+        </ul>
+      </div>
+
+      <div class="d-flex align-items-center gap-3 mb-2 mb-lg-0" style="min-width: 250px;">
+        <div class="input-group input-group-sm flex-grow-1">
+          <span class="input-group-text bg-white border-end-0"><i class="fas fa-search"></i></span>
+          <input type="text" class="form-control border-start-0" placeholder="Buscar" />
+        </div>
+        <a href="compras.html" class="text-dark fs-4" title="Carrito de Compras">
+          <i class="fas fa-shopping-cart"></i>
+        </a>
+        <a href="login.html" class="text-dark fs-4" title="Usuario">
+          <i class="fas fa-user"></i>
+        </a>
+      </div>
+    </div>
   </header>
 
   <div class="hero container">
@@ -38,21 +60,43 @@
       <button>Únete a Nosotros</button>
     </div>
     <div class="hero-imgs">
-      <img src="assets/img/camisas1.jpg" alt="Coleccion de camisas" width="150">
-      <img src="assets/img/camisas2.jpg" alt="Camisa mujer" width="150">
-      <img src="assets/img/camisas3.jpg" alt="Camisa hombre" width="150">
-      <img src="assets/img/camisas4.jpg" alt="Camisa a hombre 2" width="150">
+      <img src="assets/img/camisas1.jpg" alt="Coleccion de camisas" width="150"/>
+      <img src="assets/img/camisas2.jpg" alt="Camisa mujer" width="150"/>
+      <img src="assets/img/camisas3.jpg" alt="Camisa hombre" width="150"/>
+      <img src="assets/img/camisas4.jpg" alt="Camisa a hombre 2" width="150"/>
     </div>
   </div>
+  
+	<div class="section container" id="populares">
+	  <h2 class="mb-4 text-center">Más Populares</h2>
 
-  <div class="section container" id="populares">
-    <h2>Más Populares</h2>
-    <div class="products">
-      <div class="product"><img src="assets/img/popular1.jpg" alt="Popular 1" width="100%"></div>
-      <div class="product"><img src="assets/img/popular2.jpg" alt="Popular 2" width="100%"></div>
-      <div class="product"><img src="assets/img/popular3.jpg" alt="Popular 3" width="100%"></div>
-    </div>
-  </div>
+	  <div style="max-width: 600px; margin: auto;">
+		<div id="carouselPopulares" class="carousel slide" data-bs-ride="carousel">
+		  <div class="carousel-indicators">
+			<button type="button" data-bs-target="#carouselPopulares" data-bs-slide-to="0" class="active" aria-current="true"></button>
+			<button type="button" data-bs-target="#carouselPopulares" data-bs-slide-to="1"></button>
+			<button type="button" data-bs-target="#carouselPopulares" data-bs-slide-to="2"></button>
+		  </div>
+		  <div class="carousel-inner rounded shadow-sm">
+			<div class="carousel-item active">
+			  <img src="assets/img/popular1.jpg" class="d-block w-100" alt="Popular 1"/>
+			</div>
+			<div class="carousel-item">
+			  <img src="assets/img/popular2.jpg" class="d-block w-100" alt="Popular 2"/>
+			</div>
+			<div class="carousel-item">
+			  <img src="assets/img/popular3.jpg" class="d-block w-100" alt="Popular 3"/>
+			</div>
+		  </div>
+		  <button class="carousel-control-prev" type="button" data-bs-target="#carouselPopulares" data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  </button>
+		  <button class="carousel-control-next" type="button" data-bs-target="#carouselPopulares" data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  </button>
+		</div>
+	  </div>
+	</div>
 
   <div class="section container" id="promocion">
     <h2>Descuentos Exclusivos</h2>
@@ -65,7 +109,7 @@
   <div class="section subscribe-form container">
     <h2>Suscríbete para recibir novedades</h2>
     <form>
-      <input type="email" placeholder="Tu correo electrónico">
+      <input type="email" placeholder="Tu correo electrónico"/>
       <button type="submit">Suscribirse</button>
     </form>
   </div>
@@ -75,53 +119,49 @@
     <p>NovaTienda es una tienda de ropa especializada en prendas de alta calidad, diseño moderno y comodidad. Trabajamos para ofrecerte una experiencia de compra excepcional y productos que se ajustan a tu estilo.</p>
   </div>
 
-<footer class="bg-white text-center py-5">
-  <div class="container">
-    <h2 class="mb-4 fw-bold">NovaTienda</h2>
-    <p class="mb-4">Moda con estilo para cada ocasión. Encuentra tu look ideal con nosotros.</p>
-
-    <div class="row justify-content-center mb-4">
-      <div class="col-md-3">
-        <h5 class="fw-bold">Contacto</h5>
-        <ul class="list-unstyled">
-          <li><i class="fas fa-map-marker-alt me-2"></i>Bogotá, Colombia</li>
-          <li><i class="fas fa-phone me-2"></i><a href="tel:057-320-202-02-02">057-320-202-02-02</a></li>
-          <li><i class="fas fa-envelope me-2"></i><a href="mailto:info@novatienda.com">info@novatienda.com</a></li>
-        </ul>
+ 
+  <footer class="bg-white text-center py-5">
+    <div class="container">
+      <h2 class="mb-4 fw-bold">NovaTienda</h2>
+      <p class="mb-4">Moda con estilo para cada ocasión. Encuentra tu look ideal con nosotros.</p>
+      <div class="row justify-content-center mb-4">
+        <div class="col-md-3">
+          <h5 class="fw-bold">Contacto</h5>
+          <ul class="list-unstyled">
+            <li>Bogotá, Colombia</li>
+            <li><a href="tel:057-320-202-02-02">057-320-202-02-02</a></li>
+            <li><a href="mailto:info@novatienda.com">info@novatienda.com</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h5 class="fw-bold">Categorías</h5>
+          <ul class="list-unstyled">
+            <li><a href="#">Hombres</a></li>
+            <li><a href="#">Mujeres</a></li>
+            <li><a href="#">Niños</a></li>
+            <li><a href="#">Accesorios</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h5 class="fw-bold">Enlaces</h5>
+          <ul class="list-unstyled">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="compras.html">Compras</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="col-md-3">
-        <h5 class="fw-bold">Productos</h5>
-        <ul class="list-unstyled">
-          <li><a href="#">Sombreros</a></li>
-          <li><a href="#">Hamacas</a></li>
-          <li><a href="#">Platería</a></li>
-          <li><a href="#">Decoración</a></li>
-        </ul>
+      <div class="mb-4">
+        <h5 class="fw-bold">Síguenos</h5>
+        <a href="https://facebook.com/" class="mx-2">Facebook</a>
+        <a href="https://instagram.com/" class="mx-2">Instagram</a>
+        <a href="https://twitter.com/" class="mx-2">Twitter</a>
       </div>
-      <div class="col-md-3">
-        <h5 class="fw-bold">Navegación</h5>
-        <ul class="list-unstyled">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="acercade.html">Acerca de</a></li>
-          <li><a href="compras.html">Compras</a></li>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-      </div>
+      <div class="text-muted small">&copy; 2025 NovaTienda. Todos los derechos reservados.</div>
     </div>
+  </footer>
 
-    <div class="mb-4">
-      <h5 class="fw-bold">Síguenos</h5>
-      <a class="text-dark mx-2" href="https://facebook.com/" target="_blank"><i class="fab fa-facebook fa-lg"></i></a>
-      <a class="text-dark mx-2" href="https://instagram.com/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-      <a class="text-dark mx-2" href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
-      <a class="text-dark mx-2" href="https://pinterest.com/" target="_blank"><i class="fab fa-pinterest fa-lg"></i></a>
-    </div>
-
-    <div class="text-muted small">
-      &copy; 2025 NovaTienda. Todos los derechos reservados.
-    </div>
-  </div>
-</footer>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
