--- a/producto.html
+++ b/producto.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/estilos-Index.css" />
   <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
-  <link rel="stylesheet" href="assets/css/styles_register.css"/>
 </head>
 <body>
   <header class="border-bottom py-3">
@@ -52,19 +51,36 @@
     </div>
   </header>
 
-  <div class="main-content">
-    <div class="register-container">
-      <h2>Regístrate</h2>
-      <form id="registerForm">
-        <input type="text" id="nombre" placeholder="Nombre" required>
-        <input type="text" id="apellido" placeholder="Apellido" required>
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Contraseña" required>
-        <button id="submitBtn" type="submit" disabled>Regístrate</button>
-      </form>
-      <p class="login-link">¿Ya eres miembro? <a href="index.html">Inicia tu sesión</a></p>
+  <main class="container py-5">
+    <div class="row">
+      <div class="col-lg-5">
+        <img src="assets/img/camisa-hombre.jpg" class="img-fluid rounded mb-3" alt="Camisa hombre" />
+        <div class="d-flex justify-content-between">
+          <img src="assets/img/camisa2.jpg" class="img-thumbnail" width="100" />
+          <img src="assets/img/camisa3.jpg" class="img-thumbnail" width="100" />
+          <img src="assets/img/camisa4.jpg" class="img-thumbnail" width="100" />
+        </div>
+      </div>
+      <div class="col-lg-7">
+        <h2 class="fw-bold">Camiseta Casual para Hombre</h2>
+        <p class="h4 text-muted">$89.900</p>
+        <p>Elegante camiseta de algodón suave con diseño moderno, ideal para cualquier ocasión.</p>
+        <div class="mb-3">
+          <label class="form-label">Talla</label>
+          <div>
+            <button class="btn btn-outline-dark btn-sm">S</button>
+            <button class="btn btn-outline-dark btn-sm">M</button>
+            <button class="btn btn-outline-dark btn-sm">L</button>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Cantidad</label>
+          <input type="number" class="form-control w-25" value="1" min="1" />
+        </div>
+        <button class="btn btn-dark">Agregar al carrito</button>
+      </div>
     </div>
-  </div>
+  </main>
 
   <footer class="bg-white text-center py-5">
     <div class="container">
@@ -109,6 +125,5 @@
   </footer>
 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/register.js"></script>
 </body>
 </html>
