Se realiza carrito de compras, productos y su proceos de compras con js

--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NovaTienda - Lista de Productos</title>
+  <title>NovaTienda - Productos</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/estilos-Index.css" />
   <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
@@ -14,7 +14,6 @@
       <div class="d-flex align-items-center mb-2 mb-lg-0">
         <img src="assets/img/logo.jpg" width="120" height="120" alt="NovaTienda Logo" />
       </div>
-
       <nav class="mb-2 mb-lg-0 flex-grow-1 d-none d-md-block">
         <ul class="nav justify-content-center">
           <li class="nav-item"><a href="index.html" class="nav-link px-3 fw-bold">Inicio</a></li>
@@ -23,11 +22,8 @@
           <li class="nav-item"><a href="login.html" class="nav-link px-3 fw-bold">Iniciar sesión</a></li>
         </ul>
       </nav>
-
-      <div class="dropdown mb-2 mb-lg-0" style="padding-right: 10px;">
-        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-          ☰
-        </a>
+      <div class="d-md-none dropdown mb-2 mb-lg-0">
+        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">☰</a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
           <li><a class="dropdown-item" href="index.html">Inicio</a></li>
           <li><a class="dropdown-item" href="register.html">Registrarse</a></li>
@@ -35,56 +31,20 @@
           <li><a class="dropdown-item" href="acercade.html">Acerca de Nosotros</a></li>
         </ul>
       </div>
-
       <div class="d-flex align-items-center gap-3 mb-2 mb-lg-0" style="min-width: 250px;">
         <div class="input-group input-group-sm flex-grow-1">
           <span class="input-group-text bg-white border-end-0"><i class="fas fa-search"></i></span>
           <input type="text" class="form-control border-start-0" placeholder="Buscar" />
         </div>
-        <a href="compras.html" class="text-dark fs-4" title="Carrito de Compras">
-          <i class="fas fa-shopping-cart"></i>
-        </a>
-        <a href="login.html" class="text-dark fs-4" title="Usuario">
-          <i class="fas fa-user"></i>
-        </a>
+        <a href="compras.html" class="text-dark fs-4" title="Carrito de Compras"><i class="fas fa-shopping-cart"></i></a>
+        <a href="login.html" class="text-dark fs-4" title="Usuario"><i class="fas fa-user"></i></a>
       </div>
     </div>
   </header>
 
   <main class="container py-5">
     <h2 class="text-center mb-5">Nuestros Productos</h2>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="assets/img/camisa-hombre.jpg" class="card-img-top" alt="Camisa hombre" />
-          <div class="card-body">
-            <h5 class="card-title">Camisa Casual Hombre</h5>
-            <p class="card-text">$89.900</p>
-            <a href="productos.html" class="btn btn-dark">Ver Detalles</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="assets/img/blusa-mujer.jpg" class="card-img-top" alt="Blusa mujer" />
-          <div class="card-body">
-            <h5 class="card-title">Blusa Floral Mujer</h5>
-            <p class="card-text">$74.500</p>
-            <a href="productos.html" class="btn btn-dark">Ver Detalles</a>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="assets/img/jeans-unisex.jpg" class="card-img-top" alt="Jeans" />
-          <div class="card-body">
-            <h5 class="card-title">Jeans Unisex</h5>
-            <p class="card-text">$110.000</p>
-            <a href="productos.html" class="btn btn-dark">Ver Detalles</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="items" class="row row-cols-1 row-cols-md-3 g-4"></div>
   </main>
 
   <footer class="bg-white text-center py-5">
@@ -130,5 +90,6 @@
   </footer>
 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/productos.js"></script>
 </body>
 </html>
