--- a/compras.html
+++ b/compras.html
@@ -36,13 +36,21 @@
           <span class="input-group-text bg-white border-end-0"><i class="fas fa-search"></i></span>
           <input type="text" class="form-control border-start-0" placeholder="Buscar" />
         </div>
-        <a href="compras.html" class="text-dark fs-4" title="Carrito de Compras"><i class="fas fa-shopping-cart"></i></a>
+        <a href="compras.html" class="text-dark fs-4 position-relative" title="Carrito de Compras">
+		  <i class="fas fa-shopping-cart"></i>
+		  <span id="contador-carrito-icono" 
+				style="position: absolute; top: -8px; right: -8px; 
+					   background: red; color: white; border-radius: 50%; 
+					   padding: 2px 6px; font-size: 12px; font-weight: bold;">
+			0
+		  </span>
+		</a>
         <a href="login.html" class="text-dark fs-4" title="Usuario"><i class="fas fa-user"></i></a>
       </div>
     </div>
   </header>
 
-  <main class="container py-5">
+   <main class="container py-5">
     <h2 class="mb-4 text-center">Tu Carrito de Compras</h2>
     <table class="table table-bordered">
       <thead>
