mejora del total y de items

--- a/compras.html
+++ b/compras.html
@@ -64,10 +64,14 @@
       </thead>
       <tbody id="carrito-items"></tbody>
     </table>
-    <h4>Total: $<span id="carrito-total">0</span></h4>
-    <button id="vaciar-carrito" class="btn btn-danger">Vaciar Carrito</button>
-    <p class="mt-4">Productos en carrito: <span id="contador-carrito">0</span></p>
-    <p>Visitas a esta página: <span id="contador-visitas">0</span></p>
+    <div class="carrito-footer">
+	  <h4>Total: $<span id="carrito-total">0</span></h4>
+	  <button id="vaciar-carrito" class="btn btn-danger btn-lg">Vaciar Carrito</button>
+	  <div class="contadores">
+		<div>Productos en carrito: <span id="contador-carrito">0</span></div>
+		<div>Visitas a esta página: <span id="contador-visitas">0</span></div>
+	  </div>
+	</div>
   </main>
 
   <footer class="bg-white text-center py-5">
