Se realizan ajustes al icono del carrito de compras

--- a/acercade.html
+++ b/acercade.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<title>NovaTienda</title>
-				<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
-				<link rel="stylesheet" href="assets/css/estilos-Index.css"/>
-				<link rel="stylesheet" href="assets/css/fontawesome.min.css"/>
-			</meta>
-		</meta>
-	</head>
-	<body>
-	<header class="border-bottom py-3">
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NovaTienda - Carrito de Compras</title>
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/estilos-Index.css" />
+  <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
+</head>
+<body>
+  <header class="border-bottom py-3">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
       <div class="d-flex align-items-center mb-2 mb-lg-0">
         <img src="assets/img/logo.jpg" width="120" height="120" alt="NovaTienda Logo" />
       </div>
-
       <nav class="mb-2 mb-lg-0 flex-grow-1 d-none d-md-block">
         <ul class="nav justify-content-center">
           <li class="nav-item"><a href="index.html" class="nav-link px-3 fw-bold">Inicio</a></li>
@@ -25,11 +22,8 @@
           <li class="nav-item"><a href="login.html" class="nav-link px-3 fw-bold">Iniciar sesión</a></li>
         </ul>
       </nav>
-
       <div class="dropdown mb-2 mb-lg-0" style="padding-right: 10px;">
-        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-          ☰
-        </a>
+        <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">☰</a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
           <li><a class="dropdown-item" href="index.html">Inicio</a></li>
           <li><a class="dropdown-item" href="register.html">Registrarse</a></li>
@@ -37,18 +31,21 @@
           <li><a class="dropdown-item" href="acercade.html">Acerca de Nosotros</a></li>
         </ul>
       </div>
-
       <div class="d-flex align-items-center gap-3 mb-2 mb-lg-0" style="min-width: 250px;">
         <div class="input-group input-group-sm flex-grow-1">
           <span class="input-group-text bg-white border-end-0"><i class="fas fa-search"></i></span>
           <input type="text" class="form-control border-start-0" placeholder="Buscar" />
         </div>
-        <a href="compras.html" class="text-dark fs-4" title="Carrito de Compras">
-          <i class="fas fa-shopping-cart"></i>
-        </a>
-        <a href="login.html" class="text-dark fs-4" title="Usuario">
-          <i class="fas fa-user"></i>
-        </a>
+        <a href="compras.html" class="text-dark fs-4 position-relative" title="Carrito de Compras">
+		  <i class="fas fa-shopping-cart"></i>
+		  <span id="contador-carrito-icono" 
+				style="position: absolute; top: -8px; right: -8px; 
+					   background: red; color: white; border-radius: 50%; 
+					   padding: 2px 6px; font-size: 12px; font-weight: bold;">
+			0
+		  </span>
+		</a>
+        <a href="login.html" class="text-dark fs-4" title="Usuario"><i class="fas fa-user"></i></a>
       </div>
     </div>
   </header>
@@ -114,5 +111,6 @@
   </footer>
 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/carrito.js"></script>
 </body>
 </html>
